syntax = "proto3";
package student;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "/proto/pb";

message Student {
  int32 id = 1;
  string fullName = 2;
  google.protobuf.Timestamp birthDate = 3;
  string class = 4;
  string address = 5;
}

message UpdateStudentAddressRequest {
  int32 id = 1;
  string newAddress = 2;
}

message Response {
  string message = 1;
  int32 code = 2;
}

message GetStudentByIdRequest { int32 id = 1; }

message CreateStudentRequest {
  string fullName = 2;
  google.protobuf.Timestamp birthDate = 3;
  string class = 4;
  string address = 5;
}
message ListStudent { repeated Student students = 1; }

service StudentService {
  rpc CreateStudent(CreateStudentRequest) returns (Student);
  rpc GetStudentById(GetStudentByIdRequest) returns (Student);
  rpc GetAllStudent(google.protobuf.Empty) returns (ListStudent);
  rpc UpdateStudentAddress(UpdateStudentAddressRequest) returns (Student);
}